--- a/app/src/main/res/layout/activity_second.xml
+++ b/app/src/main/res/layout/activity_second.xml
@@ -9,9 +9,10 @@
     tools:context=".secondActivity">
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/test"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
-        android:text="Second Screen" />
+        android:text="Second Screen"
+        android:textSize="30sp" />
 </RelativeLayout>
