--- a/app/src/main/res/layout/activity_student.xml
+++ b/app/src/main/res/layout/activity_student.xml
@@ -14,14 +14,14 @@
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:layout_marginStart="12dp"
-        android:layout_marginTop="92dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="84dp"
         android:text="Student Mode"
         android:textColor="@android:color/holo_green_light"
         android:textSize="24sp"
         android:textStyle="bold"
-        android:layout_marginLeft="12dp"
-        android:layout_alignParentLeft="true" />
+        android:layout_alignParentLeft="true"
+        android:layout_marginLeft="16dp" />
 
     <Spinner
         android:id="@+id/educationLevelDropDown"
@@ -34,8 +34,8 @@
 
     <ImageButton
         android:id="@+id/imageButton"
-        android:layout_width="267dp"
-        android:layout_height="103dp"
+        android:layout_width="251dp"
+        android:layout_height="85dp"
         android:layout_above="@+id/imageButton2"
         android:layout_centerHorizontal="true"
         android:scaleType="fitCenter"
@@ -43,11 +43,55 @@
 
     <ImageButton
         android:id="@+id/imageButton2"
-        android:layout_width="267dp"
-        android:layout_height="83dp"
+        android:layout_width="251dp"
+        android:layout_height="74dp"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="39dp"
         android:scaleType="fitCenter"
         app:srcCompat="@drawable/manual_setup_option_button" />
+
+    <EditText
+        android:id="@+id/commuteTime"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/educationLevelDropDown"
+        android:ems="10"
+        android:inputType="textPersonName"
+        android:hint="Commute Time"
+        android:layout_alignParentLeft="true" />
+
+    <EditText
+        android:id="@+id/numOfCourses"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/commuteTime"
+        android:layout_centerHorizontal="true"
+        android:ems="10"
+        android:hint="Number of Courses"
+        android:inputType="textPersonName" />
+
+    <TextView
+        android:id="@+id/enterScheduleText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignStart="@+id/textView"
+        android:layout_marginBottom="252dp"
+        android:text=" Enter Schedule:"
+        android:textColor="@android:color/holo_green_light"
+        android:textSize="24sp"
+        android:textStyle="bold"
+        android:layout_alignLeft="@+id/textView" />
+
+    <CheckBox
+        android:id="@+id/checkBox"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignStart="@+id/textView"
+        android:layout_marginBottom="210dp"
+        android:text="8 hours, all working days"
+        android:layout_alignLeft="@+id/textView" />
 </RelativeLayout>
