--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,8 +10,8 @@
 
     <ImageView
         android:id="@+id/logo"
-        android:layout_width="341dp"
-        android:layout_height="257dp"
+        android:layout_width="303dp"
+        android:layout_height="230dp"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         app:srcCompat="@drawable/logo" />
@@ -20,16 +20,18 @@
         android:id="@+id/message"
         android:layout_width="345dp"
         android:layout_height="89dp"
+        android:layout_below="@+id/logo"
+        android:layout_marginTop="25dp"
         android:layout_centerInParent="true"
         app:srcCompat="@drawable/thank_you" />
 
     <EditText
         android:id="@+id/nameInput"
         android:layout_width="330dp"
-        android:layout_height="48dp"
-        android:layout_alignParentBottom="true"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/message"
+        android:layout_marginTop="20dp"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="227dp"
         android:ems="16"
         android:hint="Full Name"
         android:inputType="textPersonName"
@@ -38,10 +40,10 @@
     <EditText
         android:id="@+id/emailInput"
         android:layout_width="330dp"
-        android:layout_height="48dp"
-        android:layout_alignParentBottom="true"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/nameInput"
+        android:layout_marginTop="20dp"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="165dp"
         android:ems="16"
         android:hint="Email address"
         android:inputType="textEmailAddress"
@@ -67,29 +69,30 @@
     <TextView
         android:id="@+id/dateOfBirth"
         android:layout_width="330dp"
-        android:layout_height="48dp"
-        android:layout_alignParentBottom="true"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/emailInput"
+        android:layout_marginTop="20dp"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="100dp"
         android:hint=" Date of birth (DD/MM/YYYY)" />
 
-    <ImageView
-        android:id="@+id/gridlock_small"
-        android:layout_width="420dp"
-        android:layout_height="60dp"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="52dp"
-        android:background="@drawable/gridlock_small" />
+    <!--<ImageView-->
+        <!--android:id="@+id/gridlock_small"-->
+        <!--android:layout_width="420dp"-->
+        <!--android:layout_height="60dp"-->
+        <!--android:layout_alignParentBottom="true"-->
+        <!--android:layout_centerHorizontal="true"-->
+        <!--android:layout_marginBottom="52dp"-->
+        <!--android:background="@drawable/gridlock_small" />-->
 
     <ImageButton
         android:id="@+id/nextPageButton"
         android:layout_width="124dp"
         android:layout_height="28dp"
-        android:layout_alignEnd="@+id/logo"
         android:layout_alignParentBottom="true"
-        android:layout_alignRight="@+id/logo"
-        android:layout_marginBottom="70dp"
-        app:srcCompat="@drawable/next_page" />
+        android:layout_marginBottom="55dp"
+        android:background="@android:color/transparent"
+        app:srcCompat="@drawable/next_page"
+        android:layout_marginRight="5dp"
+        android:layout_alignParentRight="true" />
 
 </RelativeLayout>
