--- a/app/src/main/res/layout/activity_second.xml
+++ b/app/src/main/res/layout/activity_second.xml
@@ -8,48 +8,63 @@
     android:background="@drawable/background_2"
     tools:context=".secondActivity">
 
+    <ImageView
+        android:id="@+id/setupSubheading"
+        android:layout_width="63dp"
+        android:layout_height="29dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginTop="90dp"
+        app:srcCompat="@drawable/setup_subheading"/>
 
     <ImageView
         android:id="@+id/selectModeMessage"
-        android:layout_width="355dp"
-        android:layout_height="wrap_content"
+        android:layout_width="326dp"
+        android:layout_height="29dp"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="106dp"
+        android:layout_marginTop="130dp"
         app:srcCompat="@drawable/select_mode" />
 
     <ImageView
         android:id="@+id/noteModeChangeableMessage"
-        android:layout_width="319dp"
-        android:layout_height="138dp"
+        android:layout_width="306dp"
+        android:layout_height="116dp"
         android:layout_below="@+id/selectModeMessage"
+        android:layout_marginTop="15dp"
         android:layout_centerHorizontal="true"
         app:srcCompat="@drawable/note_mode_changeable" />
 
     <ImageButton
-        android:id="@+id/entrepreneurOptionButton"
+        android:id="@+id/studentOptionButton"
         android:layout_width="305dp"
-        android:layout_height="63dp"
+        android:layout_height="76dp"
         android:layout_below="@+id/noteModeChangeableMessage"
+        android:layout_marginTop="15dp"
         android:layout_centerHorizontal="true"
         android:scaleType="fitCenter"
+        android:background="@android:color/transparent"
+        app:srcCompat="@drawable/student_option_button" />
+
+    <ImageButton
+        android:id="@+id/entrepreneurOptionButton"
+        android:layout_width="305dp"
+        android:layout_height="76dp"
+        android:layout_below="@+id/studentOptionButton"
+        android:layout_marginTop="20dp"
+        android:layout_centerHorizontal="true"
+        android:scaleType="fitCenter"
+        android:background="@android:color/transparent"
         app:srcCompat="@drawable/entrepreneur_option_button" />
 
     <ImageButton
         android:id="@+id/professionalOptionButton"
-        android:layout_width="304dp"
-        android:layout_height="65dp"
+        android:layout_width="305dp"
+        android:layout_height="76dp"
         android:layout_below="@+id/entrepreneurOptionButton"
+        android:layout_marginTop="20dp"
         android:layout_centerHorizontal="true"
         android:scaleType="fitCenter"
+        android:background="@android:color/transparent"
         app:srcCompat="@drawable/professional_option_button" />
 
-    <ImageButton
-        android:id="@+id/studentOptionButton"
-        android:layout_width="302dp"
-        android:layout_height="66dp"
-        android:layout_below="@+id/professionalOptionButton"
-        android:layout_centerHorizontal="true"
-        android:scaleType="fitCenter"
-        app:srcCompat="@drawable/student_option_button" />
 </RelativeLayout>
