-time picker on 8 hour screen

--- a/app/src/main/res/layout/activity_eighthour.xml
+++ b/app/src/main/res/layout/activity_eighthour.xml
@@ -212,7 +212,7 @@
         android:layout_alignParentLeft="true" />
 
     <TextView
-        android:id="@+id/textView1"
+        android:id="@+id/startTime"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/schoolEventName"
@@ -234,10 +234,10 @@
         app:srcCompat="@drawable/start_button" />
 
     <TextView
-        android:id="@+id/textView2"
+        android:id="@+id/endTime"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/textView1"
+        android:layout_below="@+id/startTime"
         android:layout_toRightOf="@+id/endButton"
         android:layout_marginTop="68dp"
         android:layout_marginLeft="10dp"
