-fix timer picker for 8 hour option -change text in its XML layout -linked studentActivity to 8hourActivity check option

--- a/app/src/main/res/layout/activity_eighthour.xml
+++ b/app/src/main/res/layout/activity_eighthour.xml
@@ -219,7 +219,7 @@
         android:layout_toRightOf="@+id/startButton"
         android:layout_marginTop="43dp"
         android:layout_marginLeft="10dp"
-        android:text="TextView1" />
+        android:text="Start Time" />
 
     <ImageButton
         android:id="@+id/startButton"
@@ -241,7 +241,7 @@
         android:layout_toRightOf="@+id/endButton"
         android:layout_marginTop="68dp"
         android:layout_marginLeft="10dp"
-        android:text="TextView2" />
+        android:text="End Time" />
 
     <ImageButton
         android:id="@+id/endButton"
