--- a/app/src/main/res/layout/activity_student.xml
+++ b/app/src/main/res/layout/activity_student.xml
@@ -86,6 +86,7 @@
         android:layout_below="@+id/enterScheduleHeading"
         android:layout_marginTop="20dp"
         android:ems="16"
+        android:checked="false"
         android:text="8 hours, all working days" />
 
     <ImageButton
