--- a/app/src/main/res/layout/activity_event_calendar.xml
+++ b/app/src/main/res/layout/activity_event_calendar.xml
@@ -6,6 +6,15 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/background"
-    tools:context=".dayCalendarActivity">
+    tools:context=".eventCalendarActivity">
+
+
+    <CalendarView
+        android:id="@+id/calendarView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="94dp" />
 
 </RelativeLayout>
