--- a/app/src/main/res/layout/activity_manual_setup.xml
+++ b/app/src/main/res/layout/activity_manual_setup.xml
@@ -310,6 +310,30 @@
         app:srcCompat="@drawable/next_course_message" />
 
     <ImageButton
+        android:id="@+id/removeCourseButton"
+        android:layout_width="58dp"
+        android:layout_height="40dp"
+        android:layout_above="@+id/nextPageButton"
+        android:layout_alignParentRight="true"
+        android:layout_marginBottom="7dp"
+        android:layout_marginRight="40dp"
+        android:scaleType="fitCenter"
+        android:background="@android:color/transparent"
+        app:srcCompat="@drawable/remove_course_button" />
+
+    <ImageButton
+        android:id="@+id/addCourseButton"
+        android:layout_width="58dp"
+        android:layout_height="40dp"
+        android:layout_above="@+id/nextPageButton"
+        android:layout_toLeftOf="@+id/removeCourseButton"
+        android:layout_marginBottom="7dp"
+        android:layout_marginRight="15dp"
+        android:scaleType="fitCenter"
+        android:background="@android:color/transparent"
+        app:srcCompat="@drawable/add_course_button" />
+
+    <ImageButton
         android:id="@+id/backPageButton"
         android:layout_width="124dp"
         android:layout_height="28dp"
