--- a/app/src/main/res/layout/activity_effective_studying_setup.xml
+++ b/app/src/main/res/layout/activity_effective_studying_setup.xml
@@ -6,299 +6,113 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/background"
-    tools:context=".quickSetupActivity">
-
-    <EditText
-        android:id="@+id/schoolEventName"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_below="@+id/saturdayButton"
-        android:layout_marginTop="400dp"
-        android:ems="16"
-        android:inputType="textPersonName"
-        android:hint="School/Class/Event Name"
-        android:layout_alignParentLeft="true" />
-
-    <!--Spinner to select Lecture/Tutorial/Lab (Class Type)-->
-
-    <Spinner
-        android:id="@+id/classTypeDropDown"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_below="@+id/schoolEventName"
-        android:layout_marginTop="10dp"
-        android:layout_alignParentLeft="true" />
-
-    <!--endButton overlapped by startButton-->
+    tools:context=".effectiveStudyingSetupActivity">
 
     <ImageButton
-        android:id="@+id/clearLastButton"
-        android:layout_width="58dp"
+        android:id="@+id/saturdayButton"
+        android:layout_width="40dp"
         android:layout_height="40dp"
-        android:layout_below="@+id/classTypeDropDown"
-        android:layout_alignParentRight="true"
-        android:layout_marginTop="4dp"
-        android:layout_marginRight="40dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_marginLeft="35dp"
+        android:layout_marginTop="10dp"
         android:scaleType="fitCenter"
         android:background="@android:color/transparent"
-        app:srcCompat="@drawable/clear_last_button" />
-
-    <TextView
-        android:id="@+id/endTime"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/classTypeDropDown"
-        android:layout_marginTop="40dp"
-        android:layout_marginLeft="170dp"
-        android:text="End Time" />
-
-    <LinearLayout
-        android:id="@+id/first_11"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/classTypeDropDown"
-        android:visibility="gone">
-
-        <ImageButton
-            android:id="@+id/endButton"
-            android:layout_width="140dp"
-            android:layout_height="59dp"
-            android:layout_alignParentLeft="true"
-            android:layout_below="@+id/classTypeDropDown"
-            android:layout_marginLeft="25dp"
-            android:layout_marginTop="10dp"
-            android:background="@android:color/transparent"
-            android:scaleType="fitCenter"
-            app:srcCompat="@drawable/end_button" />
-
-    </LinearLayout>
-
-    <TextView
-        android:id="@+id/startTime"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/classTypeDropDown"
-        android:layout_marginTop="15dp"
-        android:layout_marginLeft="170dp"
-        android:text="Start Time" />
-
-    <LinearLayout
-        android:id="@+id/second_11"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/classTypeDropDown">
-
-        <ImageButton
-            android:id="@+id/startButton"
-            android:layout_width="140dp"
-            android:layout_height="59dp"
-            android:layout_alignParentLeft="true"
-            android:layout_below="@+id/classTypeDropDown"
-            android:layout_marginLeft="25dp"
-            android:layout_marginTop="10dp"
-            android:background="@android:color/transparent"
-            android:scaleType="fitCenter"
-            app:srcCompat="@drawable/start_button" />
-
-    </LinearLayout>
+        app:srcCompat="@drawable/saturday_button" />
 
     <ImageButton
-        android:id="@+id/backPageButton"
-        android:layout_width="124dp"
-        android:layout_height="28dp"
+        android:id="@+id/sundayButton"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
         android:layout_alignParentTop="true"
-        android:layout_marginTop="43dp"
+        android:layout_toRightOf="@+id/saturdayButton"
+        android:layout_marginLeft="10dp"
+        android:layout_marginTop="10dp"
         android:background="@android:color/transparent"
-        app:srcCompat="@drawable/last_page"
-        android:layout_marginRight="5dp"
-        android:layout_alignParentRight="true" />
+        android:scaleType="fitCenter"
+        app:srcCompat="@drawable/sunday_button" />
 
     <ImageButton
-        android:id="@+id/nextPageButton"
-        android:layout_width="124dp"
-        android:layout_height="28dp"
+        android:id="@+id/mondayButton"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:layout_alignParentTop="true"
+        android:layout_toRightOf="@+id/sundayButton"
+        android:layout_marginLeft="10dp"
+        android:layout_marginTop="10dp"
+        android:background="@android:color/transparent"
+        android:scaleType="fitCenter"
+        app:srcCompat="@drawable/monday_button" />
+
+    <ImageButton
+        android:id="@+id/tuesdayButton"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:layout_alignParentTop="true"
+        android:layout_toRightOf="@+id/mondayButton"
+        android:layout_marginLeft="10dp"
+        android:layout_marginTop="10dp"
+        android:background="@android:color/transparent"
+        android:scaleType="fitCenter"
+        app:srcCompat="@drawable/tuesday_button" />
+
+    <ImageButton
+        android:id="@+id/wednesdayButton"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:layout_alignParentTop="true"
+        android:layout_toRightOf="@+id/tuesdayButton"
+        android:layout_marginLeft="10dp"
+        android:layout_marginTop="10dp"
+        android:background="@android:color/transparent"
+        android:scaleType="fitCenter"
+        app:srcCompat="@drawable/wednesday_button" />
+
+    <ImageButton
+        android:id="@+id/thursdayButton"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:layout_alignParentTop="true"
+        android:layout_toRightOf="@+id/wednesdayButton"
+        android:layout_marginLeft="10dp"
+        android:layout_marginTop="10dp"
+        android:background="@android:color/transparent"
+        android:scaleType="fitCenter"
+        app:srcCompat="@drawable/thursday_button" />
+
+    <ImageButton
+        android:id="@+id/fridayButton"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:layout_alignParentTop="true"
+        android:layout_toRightOf="@+id/thursdayButton"
+        android:layout_marginLeft="10dp"
+        android:layout_marginTop="10dp"
+        android:background="@android:color/transparent"
+        android:scaleType="fitCenter"
+        app:srcCompat="@drawable/friday_button" />
+
+    <!--ScrollView-->
+
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="150dp"
         android:layout_alignParentBottom="true"
-        android:layout_marginBottom="55dp"
-        android:background="@android:color/transparent"
-        app:srcCompat="@drawable/next_page"
-        android:layout_marginRight="5dp"
-        android:layout_alignParentRight="true" />
+        android:layout_marginBottom="51dp">
 
-    <!--Collapsed ImageButtons for days of the week. Selected versions are in the background-->
+        <GridLayout
+            android:id="@+id/courseGrid"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:columnCount="2"
+            android:rowCount="6">
 
-    <ImageButton
-    android:id="@+id/saturdayButtonSelected"
-    android:layout_width="40dp"
-    android:layout_height="40dp"
-    android:layout_alignParentStart="true"
-    android:layout_alignParentTop="true"
-    android:layout_alignParentLeft="true"
-    android:layout_marginLeft="35dp"
-    android:layout_marginTop="10dp"
-    android:scaleType="fitCenter"
-    android:background="@android:color/transparent"
-    app:srcCompat="@drawable/saturday_button_selected" />
+        </GridLayout>
 
-    <ImageButton
-    android:id="@+id/saturdayButton"
-    android:layout_width="40dp"
-    android:layout_height="40dp"
-    android:layout_alignParentStart="true"
-    android:layout_alignParentTop="true"
-    android:layout_alignParentLeft="true"
-    android:layout_marginLeft="35dp"
-    android:layout_marginTop="10dp"
-    android:scaleType="fitCenter"
-    android:background="@android:color/transparent"
-    app:srcCompat="@drawable/saturday_button" />
+    </ScrollView>
 
-    <ImageButton
-    android:id="@+id/sundayButtonSelected"
-    android:layout_width="40dp"
-    android:layout_height="40dp"
-    android:layout_alignParentTop="true"
-    android:layout_toRightOf="@+id/saturdayButtonSelected"
-    android:layout_marginLeft="10dp"
-    android:layout_marginTop="10dp"
-    android:background="@android:color/transparent"
-    android:scaleType="fitCenter"
-    app:srcCompat="@drawable/sunday_button_selected" />
-
-    <ImageButton
-    android:id="@+id/sundayButton"
-    android:layout_width="40dp"
-    android:layout_height="40dp"
-    android:layout_alignParentTop="true"
-    android:layout_toRightOf="@+id/saturdayButton"
-    android:layout_marginLeft="10dp"
-    android:layout_marginTop="10dp"
-    android:background="@android:color/transparent"
-    android:scaleType="fitCenter"
-    app:srcCompat="@drawable/sunday_button" />
-
-    <ImageButton
-    android:id="@+id/mondayButtonSelected"
-    android:layout_width="40dp"
-    android:layout_height="40dp"
-    android:layout_alignParentTop="true"
-    android:layout_toRightOf="@+id/sundayButtonSelected"
-    android:layout_marginLeft="10dp"
-    android:layout_marginTop="10dp"
-    android:background="@android:color/transparent"
-    android:scaleType="fitCenter"
-    app:srcCompat="@drawable/monday_button_selected" />
-
-    <ImageButton
-    android:id="@+id/mondayButton"
-    android:layout_width="40dp"
-    android:layout_height="40dp"
-    android:layout_alignParentTop="true"
-    android:layout_toRightOf="@+id/sundayButton"
-    android:layout_marginLeft="10dp"
-    android:layout_marginTop="10dp"
-    android:background="@android:color/transparent"
-    android:scaleType="fitCenter"
-    app:srcCompat="@drawable/monday_button" />
-
-    <ImageButton
-    android:id="@+id/tuesdayButtonSelected"
-    android:layout_width="40dp"
-    android:layout_height="40dp"
-    android:layout_alignParentTop="true"
-    android:layout_toRightOf="@+id/mondayButtonSelected"
-    android:layout_marginLeft="10dp"
-    android:layout_marginTop="10dp"
-    android:background="@android:color/transparent"
-    android:scaleType="fitCenter"
-    app:srcCompat="@drawable/tuesday_button_selected" />
-
-    <ImageButton
-    android:id="@+id/tuesdayButton"
-    android:layout_width="40dp"
-    android:layout_height="40dp"
-    android:layout_alignParentTop="true"
-    android:layout_toRightOf="@+id/mondayButton"
-    android:layout_marginLeft="10dp"
-    android:layout_marginTop="10dp"
-    android:background="@android:color/transparent"
-    android:scaleType="fitCenter"
-    app:srcCompat="@drawable/tuesday_button" />
-
-    <ImageButton
-    android:id="@+id/wednesdayButtonSelected"
-    android:layout_width="40dp"
-    android:layout_height="40dp"
-    android:layout_alignParentTop="true"
-    android:layout_toRightOf="@+id/tuesdayButtonSelected"
-    android:layout_marginLeft="10dp"
-    android:layout_marginTop="10dp"
-    android:background="@android:color/transparent"
-    android:scaleType="fitCenter"
-    app:srcCompat="@drawable/wednesday_button_selected" />
-
-    <ImageButton
-    android:id="@+id/wednesdayButton"
-    android:layout_width="40dp"
-    android:layout_height="40dp"
-    android:layout_alignParentTop="true"
-    android:layout_toRightOf="@+id/tuesdayButton"
-    android:layout_marginLeft="10dp"
-    android:layout_marginTop="10dp"
-    android:background="@android:color/transparent"
-    android:scaleType="fitCenter"
-    app:srcCompat="@drawable/wednesday_button" />
-
-    <ImageButton
-    android:id="@+id/thursdayButtonSelected"
-    android:layout_width="40dp"
-    android:layout_height="40dp"
-    android:layout_alignParentTop="true"
-    android:layout_toRightOf="@+id/wednesdayButtonSelected"
-    android:layout_marginLeft="10dp"
-    android:layout_marginTop="10dp"
-    android:background="@android:color/transparent"
-    android:scaleType="fitCenter"
-    app:srcCompat="@drawable/thursday_button_selected" />
-
-    <ImageButton
-    android:id="@+id/thursdayButton"
-    android:layout_width="40dp"
-    android:layout_height="40dp"
-    android:layout_alignParentTop="true"
-    android:layout_toRightOf="@+id/wednesdayButton"
-    android:layout_marginLeft="10dp"
-    android:layout_marginTop="10dp"
-    android:background="@android:color/transparent"
-    android:scaleType="fitCenter"
-    app:srcCompat="@drawable/thursday_button" />
-
-    <ImageButton
-    android:id="@+id/fridayButtonSelected"
-    android:layout_width="40dp"
-    android:layout_height="40dp"
-    android:layout_alignParentTop="true"
-    android:layout_toRightOf="@+id/thursdayButtonSelected"
-    android:layout_marginLeft="10dp"
-    android:layout_marginTop="10dp"
-    android:background="@android:color/transparent"
-    android:scaleType="fitCenter"
-    app:srcCompat="@drawable/friday_button_selected" />
-
-    <ImageButton
-    android:id="@+id/fridayButton"
-    android:layout_width="40dp"
-    android:layout_height="40dp"
-    android:layout_alignParentTop="true"
-    android:layout_toRightOf="@+id/thursdayButton"
-    android:layout_marginLeft="10dp"
-    android:layout_marginTop="10dp"
-    android:background="@android:color/transparent"
-    android:scaleType="fitCenter"
-    app:srcCompat="@drawable/friday_button" />
-
-    <!--Collapsed ImageButtons for days of the week. Selected versions are in the background-->
+    <!--ScrollView-->
 
     <!--GridLayout of week-->
 
