--- a/app/src/main/res/layout/activity_manual_setup.xml
+++ b/app/src/main/res/layout/activity_manual_setup.xml
@@ -335,8 +335,8 @@
 
     <ImageButton
         android:id="@+id/backPageButton"
-        android:layout_width="124dp"
-        android:layout_height="28dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_marginTop="90dp"
         android:background="@android:color/transparent"
@@ -346,8 +346,8 @@
 
     <ImageButton
         android:id="@+id/nextPageButton"
-        android:layout_width="124dp"
-        android:layout_height="28dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_marginBottom="55dp"
         android:background="@android:color/transparent"
