--- a/app/src/main/res/layout/activity_quick_setup.xml
+++ b/app/src/main/res/layout/activity_quick_setup.xml
@@ -78,8 +78,8 @@
 
     <ImageButton
         android:id="@+id/backPageButton"
-        android:layout_width="124dp"
-        android:layout_height="28dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_marginTop="43dp"
         android:background="@android:color/transparent"
@@ -89,8 +89,8 @@
 
     <ImageButton
         android:id="@+id/nextPageButton"
-        android:layout_width="124dp"
-        android:layout_height="28dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_marginBottom="55dp"
         android:background="@android:color/transparent"
