--- a/app/src/main/res/layout/activity_quick_setup_cardview.xml
+++ b/app/src/main/res/layout/activity_quick_setup_cardview.xml
@@ -106,10 +106,10 @@
 
     <ImageButton
         android:id="@+id/backPageButton"
-        android:layout_width="124dp"
-        android:layout_height="28dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
-        android:layout_marginTop="43dp"
+        android:layout_marginTop="45dp"
         android:background="@android:color/transparent"
         app:srcCompat="@drawable/last_page"
         android:layout_marginRight="5dp"
@@ -117,8 +117,8 @@
 
     <ImageButton
         android:id="@+id/nextPageButton"
-        android:layout_width="124dp"
-        android:layout_height="28dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_marginBottom="55dp"
         android:background="@android:color/transparent"
