--- a/app/src/main/res/layout/activity_student.xml
+++ b/app/src/main/res/layout/activity_student.xml
@@ -91,8 +91,8 @@
 
     <ImageButton
         android:id="@+id/backPageButton"
-        android:layout_width="124dp"
-        android:layout_height="28dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_marginTop="90dp"
         android:background="@android:color/transparent"
