--- a/app/src/main/res/layout/activity_student.xml
+++ b/app/src/main/res/layout/activity_student.xml
@@ -47,35 +47,30 @@
         android:background="@android:color/transparent"
         app:srcCompat="@drawable/manual_setup_option_button" />
 
-    <EditText
+    <TextView
         android:id="@+id/commuteTime"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:padding="10dp"
+        android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_below="@+id/educationLevelDropDown"
         android:layout_marginTop="20dp"
-        android:ems="16"
-        android:inputType="textPersonName"
+        android:textSize="16sp"
         android:hint="Commute Time: 0 hour(s) and 0 minute(s)"
-        android:layout_alignParentLeft="true" />
+        android:inputType="textPersonName" />
 
     <EditText
         android:id="@+id/numOfCourses"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:padding="10dp"
         android:layout_below="@+id/commuteTime"
         android:layout_marginTop="20dp"
         android:layout_centerHorizontal="true"
-        android:ems="16"
+        android:textSize="16sp"
         android:hint="Number of Courses"
         android:inputType="number" />
-
-    <Button
-        android:id="@+id/go"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/numOfCourses"
-        android:layout_alignParentRight="true"/>
 
     <ImageView
         android:id="@+id/enterScheduleHeading"
